force-app/main/default/objects/Operation__c/Operation__c.object-meta.xml
<CustomObject>
    <label>Operation</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Operation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>