force-app/main/default/objects/Operation__c/fields/Cargo_quantity__c.field-meta.xml
<CustomField>
    <fullName>Cargo_quantity__c</fullName>
    <label>Cargo quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>