force-app/main/default/objects/Operation__c/fields/Charter__c.field-meta.xml
<CustomField>
    <fullName>Charter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charter</label>
    <referenceTo>Charter__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>