force-app/main/default/objects/Operation__c/fields/Date_of_assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_assignment__c</fullName>
    <label>Date of assignment</label>
    <type>DateTime</type>
</CustomField>