force-app/main/default/objects/Operation__c/fields/Date_of_finish__c.field-meta.xml
<CustomField>
    <fullName>Date_of_finish__c</fullName>
    <label>Date of finish</label>
    <type>DateTime</type>
</CustomField>