force-app/main/default/objects/Operation__c/fields/Departure_Port__c.field-meta.xml
<CustomField>
    <fullName>Departure_Port__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure Port</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>