force-app/main/default/objects/Operation__c/fields/Destination_Port__c.field-meta.xml
<CustomField>
    <fullName>Destination_Port__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Port</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Operations (Destination Port)</relationshipLabel>
    <relationshipName>Operations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>