force-app/main/default/objects/Operation__c/fields/Is_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Loaded</label>
    <type>Checkbox</type>
</CustomField>