force-app/main/default/objects/Operation__c/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <label>Vessel</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>Vessel Name</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>